# LinuxFileNameChanger

./: CMakeLists.txt  Program.cpp  README.md  RenameFiles.cpp  RenameFiles.h
src/: Program.cpp  RenameFiles.cpp
